--- a/sprkiz.htm
+++ b/sprkiz.htm
@@ -102,7 +102,7 @@
 </pre>
 
 
-    <img src="./media/h-media/back.JPG" alt="pjkk " class="y">
+    <img src="./media/h-media/back.jpg" alt="pjkk " class="y">
 
     <pre class="two">
      Children laugh and run as the sun eats down on them.
