--- a/trying22.html
+++ b/trying22.html
@@ -186,7 +186,7 @@
                         <span class="fa fa-star"></span>
                     </div>
                 </div>
-                <iframe src="maskia\h4.mp4" width="300px" height="400px autoplay"></iframe>
+                <iframe src="./media/nourhanfouad_media/h4.mp4" width="300px" height="400px autoplay"></iframe>
             </div>
             <div id="c6">
                 FOR MORE DETAILS CLICK HERE.. <button id="c7"
@@ -256,7 +256,7 @@
         <h3 id="e2">ٍSPORTS SHOES FROM MYNTRA </h3>
         <div class="e3">
             <div class="e8">
-                <iframe src="maskia\n7.mp4" width="300px" height="400px autoplay controls"></iframe>
+                <iframe src="./media/nourhanfouad_media/n7.mp4" width="300px" height="400px autoplay controls"></iframe>
             </div>
             <div class="e4">
                 <img src="./media/nourhanfouad_media\s1.webp">
@@ -410,7 +410,7 @@
                     <span class="fa fa-star"></span>
                 </div>
             </div>
-            <iframe src="maskia\gog.mp4" width="300px" height="400px autoplay"></iframe>
+            <iframe src="./media/nourhanfouad_media/gog.mp4" width="300px" height="400px autoplay"></iframe>
         </div>
         <div id="h6">
             FOR MORE DETAILS CLICK HERE.. <button id="h7"
@@ -484,7 +484,7 @@
         <h3 id="v2">ٍSANDALS FROM MATCHESFASHION </h3>
         <div class="v3">
             <div class="v8">
-                <iframe src="maskia\nuoo.mp4" width="300px" height="400px autoplay controls"></iframe>
+                <iframe src="./media/nourhanfouad_media/nuoo.mp4" width="300px" height="400px autoplay controls"></iframe>
             </div>
             <div class="v4">
                 <img src="./media/nourhanfouad_media\bto.webp">
