--- a/car-showroom.html
+++ b/car-showroom.html
@@ -56,9 +56,9 @@
                     <li>
                         <a href="#">Beauty</a>
                         <ul>
-                             <li><a href="nour3.html.html">Skin Care</a></li>
-                        <li><a href="nour.html.html">Hair Care</a></li>
-                        <li><a href="nour2.html.html">Make Up</a></li>
+                            <li><a href="nour3.html">Skin Care</a></li>
+                        <li><a href="nour.html">Hair Care</a></li>
+                        <li><a href="nour2.html">Make Up</a></li>
                             <li><a href="care.html">Personal Caring Devicies</a></li>
 
                         </ul>
