--- a/electrical-devicies.html
+++ b/electrical-devicies.html
@@ -55,9 +55,9 @@
                     <li>
                         <a href="#">Beauty</a>
                         <ul>
-                             <li><a href="nour3.html.html">Skin Care</a></li>
-                        <li><a href="nour.html.html">Hair Care</a></li>
-                        <li><a href="nour2.html.html">Make Up</a></li>
+                            <li><a href="nour3.html">Skin Care</a></li>
+                            <li><a href="nour.html">Hair Care</a></li>
+                            <li><a href="nour2.html">Make Up</a></li>
                             <li><a href="care.html">Personal Caring Devicies</a></li>
 
                         </ul>
@@ -336,8 +336,7 @@
                         </div>
 
                         <div class="info">
-                            <h5>
-                                Tornado SM-700 Stand Mixer </h5>
+                            <h5>Tornado SM-700 Stand Mixer </h5>
                             <h4>2999.00LE</h4>
                             <a href="#" class="buy">buy</a>
                         </div>
