--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/project.css">
+    <link rel="stylesheet" href="./css/project.css">
     <title>Fast Food</title>
 </head>
 
@@ -53,9 +53,9 @@
                 <li>
                     <a href="#">Beauty</a>
                     <ul>
-                        <li><a href="nour3.html.html">Skin Care</a></li>
-                        <li><a href="nour.html.html">Hair Care</a></li>
-                        <li><a href="nour2.html.html">Make Up</a></li>
+                        <li><a href="nour3.html">Skin Care</a></li>
+                        <li><a href="nour.html">Hair Care</a></li>
+                        <li><a href="nour2.html">Make Up</a></li>
                         <li><a href="care.html">Personal Caring Devicies</a></li>
 
                     </ul>
