--- a/page1.html
+++ b/page1.html
@@ -1,131 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/project.css">
+    <link rel="stylesheet" href="./css/yara2.css" />
+    <link rel="stylesheet" href="./css/all.min.css">
     <title>Market</title>
+   
 </head>
-
+ 
 <body class="bodyy ">
-    <section id="header">
-        <!--
-    <a href="#"><img src="images10/logo1.jpg" class="logo" alt=""></a>
-    -->
-        <div class="logo">
-            <h1>HNY</h1>
-        </div>
-        <div>
-            <ul id="navbar">
-                <li><a href="home.html">Home</a></li>
-                <li>
-                    <a href="#">Shopping</a>
-                    <ul>
-                        <li><a href="index.html">Women And Girls Wear </a></li>
-                        <li><a href="index1.html">Women And Girls Shoe</a></li>
-                        <li><a href="trying1.html">Men And Boys Wear</a></li>
-                        <li><a href="trying22.html">Men And Boys Shoe</a></li>
-                        <li><a href="hoda2.html">Accessories</a></li>
-
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="active">Dining</a>
-                    <ul>
-                        <li><a href="page2.html">Food Cort</a></li>
-                        <li><a href="page3.html">Cafe</a></li>
-                        <li><a href="page1.html">Market</a></li>
-
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="#">Entertainment</a>
-                    <ul>
-                        <li><a href="sprkiz.htm">Kids area</a></li>
-                        <li><a href="cienma.htm">Cenima</a></li>
-
-
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Beauty</a>
-                    <ul>
-                        <li><a href="nour3.html">Skin Care</a></li>
-                        <li><a href="nour.html">Hair Care</a></li>
-                        <li><a href="nour2.html">Make Up</a></li>
-                        <li><a href="care.html">Personal Caring Devicies</a></li>
-
-                    </ul>
-
-                </li>
-
-                <li>
-                    <a href="#">Electronics</a>
-                    <ul>
-                        <li><a href="electrical-devicies.html">Electrical Devicies</a></li>
-                        <li><a href="electronics.html">Electronics</a></li>
-
-
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" >More</a>
-                    <ul>
-
-
-                        <li><a href="hoda.html">Books</a></li>
-                        <li><a href="car-showroom.html">Car Showroom</a></li>
-
-                    </ul>
-                </li>
-                <a href="#" id="close"><i class="far fa-times"></i></a>
-
-            </ul>
-        </div>
-        <div id="mobile">
-            <i id="bar" class="fas fa-outdent"></i>
-        </div>
-    </section>
-
-
+ 
+ 
     <img src="./media/media/market/Hypermarket.jpg" alt=carrefour class="hna">
     <a href="https://www.carrefouregypt.com/mafegy/ar/ " title="click here to visit our site"> <img
             src="./media/media/market/logo.png" id="logo" /></a>
     <h1 class="hana2">Carrefour Market</h1>
-
+ 
     <pre class="non">
          At Carrefour – one of the world's leading hypermarkets  – shoppers can discover
          thousands of brands in a wide variety of merchandise. From groceries and fresh
           produce, to deli, butchery, electronics, home appliances, clothing and much more,
            Carrefour is a one-stop-shop for all your needs.
         The region's most dynamic, fast-growing and exciting hypermarket chain. As a
-         joint venture company by Majid al Futtaim and Carrefour France, this global 
+         joint venture company by Majid al Futtaim and Carrefour France, this global
          expertise helps us offer shoppers in Egypt the same quality, variety and value-for-
          money that is provided all over the world..
     </pre>
-
-
-
-
+ 
+ 
+ 
+ 
     <div class="slider">
         <ul class="list1">
-
+ 
             <il class="listt">
                 <img src="./media/media/market/menu3.jpg " width="500px" />
                 <h3 class="hedding">Carrefour menu 1</h3>
             </il>
-
+ 
             <il class="listt">
                 <img src="./media/media/market/menu 2.png " width="500px" />
                 <h3 class="hedding">Carrefour menu 2</h3>
             </il>
-
+ 
             <il class="listt">
                 <img src="./media/media/market/menu 4.jpg" width="500px" />
                 <h3 class="hedding">Carrefour menu 3</h3>
             </il>
-
+ 
             <il class="listt">
                 <img src="./media/media/market/menu 5.jpg" width="500px" />
                 <h3 class="hedding">Carrefour menu 4</h3>
@@ -141,26 +65,26 @@
     <br>
     <h2 class="hhh"> Contact us & Our loction </h2>
     <div id="icons1">
-
+ 
         <a href="https://www.facebook.com/carrefouregypt/"> <img
                 src="./media/media/icons/3259376_facebook_media_social_icon.png" /></a>
         <a href="https://www.youtube.com/channel/UC4D64Xe6DBR1Qx4lPxksk-Q"> <img
                 src="./media/media/icons/3259396_media_social_youtube_icon.png" /></a>
         <a href=""> <img src="./media/media/icons/3259417_media_social_viber_icon.png" /></a>
         <a href="https://www.instagram.com/carrefouregypt/?igshid=YmMyMTA2M2Y="> <img
-                src="./media/media/icons/instamarket.png" /></a>
+                src="./media/media/icons/3259424_instagram_social media_social_icon.png" /></a>
         <a href="https://www.carrefouregypt.com/mafegy/ar/"> <img
                 src="./media/media/icons/3259389_media_social_windows_icon.png" /></a>
         <a
             href="https://www.citycentremaadi.com/MapsIntegrated/index-integrate-ccmaadi.html?destId=112795&lng=en&storeview=true">
             <img src="./media/media/icons/map.png" /></a>
     </div>
-
+ 
     <br />
-
+ 
     <table class="hana1">
         <caption class="cap">Some of our prodects </caption>
-
+ 
         <tr class="tablehana">
             <th class="tablehana">Fruits</th>
             <th class="tablehana">Meats</th>
@@ -214,7 +138,7 @@
             <td class="tablehana">Labtop</td>
             <td class="tablehana">bag</td>
             <td class="tablehana">cleaning materials</td>
-
+ 
         </tr>
     </table>
     <br />
@@ -222,71 +146,26 @@
         <a href="https://www.carrefouregypt.com/mafegy/ar/" class="link" title="Our site" target="_blank">click here</a>
     </p>
     <br />
-
+ 
     <hr />
     <p class="para1"> To see the best offers, watch the video </p>
     <br />
     <video class="vidmarket" controls autoplay loop>
-        <source src="./media/media/market/videoplayback.mp4" type="video/mp4">
+        <source src="./media/media/market/videomarket.mp4" type="video/mp4">
         <br />
     </video>
     <hr />
     <br />
+    <script src="./js/hana.js">
+   
 
-
-    <footer class="section-p1">
-        <div class="col">
-            <h1>HNY</h1>
-            <h4>Contact</h4>
-            <p><strong>Address:</strong>30 Salah Street, Masr El Gdida</p>
-            <p><strong>Phone:</strong>01025964102 / 01125478851</p>
-            <p><strong>Hours:</strong>10:00 AM - 12:00 PM, all week</p>
-            <div class="follow">
-                <h4>Follow us</h4>
-                <div class="icon">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instgram"></i>
-                    <i class="fab fa-pinterest"></i>
-                    <i class="fab fa-youtube"></i>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <h4>About</h4>
-            <a href="#">About Us</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms & Conditions</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Services</a>
-            <a href="#">Help</a>
-        </div>
-
-        <div class="col">
-            <h4>Quik Links</h4>
-            <a href="#">Home</a>
-            <a href="#">Shopping</a>
-            <a href="#">Food Court</a>
-            <a href="#">Entertainment</a>
-            <a href="#">Beauty</a>
-            <a href="#">Electronics</a>
-            <a href="#">Books</a>
-        </div>
-
-       
-
-
-
-    </footer>
-
-
-
-
-
-
-
-
-
+    </script>
 </body>
-
+ 
 </html>
+
+
+
+
+
+
