--- a/trying22.html
+++ b/trying22.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
     <link rel="stylesheet" href="://cdnjs../ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/fouad.css">
+    <link rel="stylesheet" href="./css/yara2.css" />
+    <link rel="stylesheet" href="./css/all.min.css">
 
     <style>
        
