--- a/sprkiz.htm
+++ b/sprkiz.htm
@@ -105,7 +105,7 @@ ground around all the equipment.
 
 </pre>
         
-    <img src="./media/hager.media/back.jpg" alt="pjkk "class="y">
+    <img src="./media/hager.media/back.JPG" alt="pjkk "class="y">
     </section>
    <pre class="two">
      Children laugh and run as the sun eats down on them, Parents
