--- a/trying22.html
+++ b/trying22.html
@@ -593,7 +593,8 @@
         <img class="nom" src="./media/nourhanfouad_media\giv.jpg">
 
     </div>
-    </div><footer class="section-p1">
+    </div>
+    <footer class="section-p1">
         <div class="col">
             <h1>HNY</h1>
             <h4>Contact</h4>
