--- a/page1.html
+++ b/page1.html
@@ -228,7 +228,7 @@
     <hr />
     <p class="para1"> To see the best offers, watch the video </p>
     <br />
-    <video class="vidmarket" controls autoplay loop>
+    <video class="vidmarket" controls autoplay loop muted>
         <source src="./media/media/market/videomarket.mp4" type="video/mp4">
         <br />
     </video>
