--- a/page2.html
+++ b/page2.html
@@ -195,7 +195,7 @@
         <p class="para2"> To See The Best Offers, Watch The Video </p>
         <hr />
 
-        <video class="vidmac" controls autoplay loop>
+        <video class="vidmac" controls autoplay loop muted>
             <source src="./media/media/mac/mac.mp4" type="video/mp4">
         </video>
         <iframe src="./media/media/icons/adv3.jpg" class="adve"> <a href="https://www.youtube.com/watch?v=zJ7Q7bIVd_4">
@@ -215,7 +215,7 @@
             <p class="texth">Choose Your Favorite Sandwich</p>
             <p class="texth">Eat In <bold>HNY Mall</bold>
             </p>
-            <video class="vidbazoka" controls autoplay loop>
+            <video class="vidbazoka" controls autoplay loop muted>
                 <source src="./media/media/bazokz/bazoka.mp4" type="video/mp4">
             </video>
         </div>
@@ -308,10 +308,10 @@
                 <img src="./media/media/icons/mappizzahut.png" /></a>
         </div>
 
-        <video class="vidpizza" controls autoplay loop>
+        <video class="vidpizza" controls autoplay loop muted>
             <source src="./media/media/pizza hut/video1pizza.mp4" type="video/mp4">
         </video>
-        <video class="vidpizza2" controls autoplay loop>
+        <video class="vidpizza2" controls autoplay loop muted>
             <source src="./media/media/pizza hut/video2pizza.mp4" type="video/mp4">
         </video>
 
@@ -367,7 +367,7 @@
         </div>
 
         <p class="hana123">Best Offer From Hardee's Show Video </p>
-        <video class="vidhardes" controls autoplay loop>
+        <video class="vidhardes" controls autoplay loop muted >
             <source src="./media/media/hardees/Hardees.mp4" type="video/mp4">
         </video>
     </div>
